# beanhub-inbox

./: README.md  pyproject.toml
beanhub_inbox/: data_types.py  llm.py  processor.py
scripts/: generate_eml.py
tests/: conftest.py  factories.py  test_llm.py  test_processor.py
tests/fixtures/: sample.yaml
tests/fixtures/processor/basic/: inbox.yaml
