[project]
name = "beanhub-inbox"
version = "0.1.2"
description = "Email processing engine for archiving and extracting financial data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "fast-mail-parser>=0.2.5",
    "jinja2>=3.1.6",
    "outlines>=0.2.3",
    "pydantic>=2.11.2",
    "pyyaml>=6.0.2",
    "sentencepiece>=0.2.0",
    "transformers>=4.51.2",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pytest-factoryboy>=2.7.0",
    "pytest>=8.3.5",
]
